--- a/TheWorld/config.json
+++ b/TheWorld/config.json
@@ -4,6 +4,11 @@
   },
   "ConnectionStrings": {
     "WorldContextConnection": "Server=(localdb)\\MSSQLLocalDb;Database=TheWorldDb;Trusted_Connection=true;MultipleActiveResultSets=true"
+  },
+  "Keys":
+  {
   } 
 }
+
+
 
