--- a/TheWorld/project.json
+++ b/TheWorld/project.json
@@ -19,7 +19,8 @@
       "type": "build"
     },
     "Microsoft.Extensions.Logging.Debug": "1.0.0",
-    "AutoMapper":  "4.2.1" 
+    "AutoMapper": "4.2.1",
+    "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0" 
   },
 
   "tools": {
