--- a/TheWorld/project.json
+++ b/TheWorld/project.json
@@ -1,8 +1,7 @@
 {
   "dependencies": {
     "Microsoft.NETCore.App": {
-      "version": "1.0.1",
-      "type": "platform"
+      "version": "1.0.1"
     },
     "Microsoft.AspNetCore.Diagnostics": "1.0.0",
     "Microsoft.AspNetCore.Server.IISIntegration": "1.0.0",
@@ -54,14 +53,22 @@
     }
   },
 
+  "runtimes": {
+    "win81-x64": {  } 
+  },
+
   "publishOptions": {
     "include": [
       "wwwroot",
-      "web.config"
+      "web.config",
+      "Views",
+      "config.json"
     ]
   },
 
   "scripts": {
+    "prepublish": [ "npm install", "bower install" ],
+    "prepare" :  "gulp minify", 
     "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
   }
 }
